--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB STUDIO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css/>
   </head>
   <body>
     <!-- header -->
@@ -20,11 +28,13 @@
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-email"
-              >info@devstudio.com</a>
+              >info@devstudio.com</a
+            >
           </li>
           <li>
             <a href="tel:+110001111111" class="contacts-number"
-              >+11 (000) 111-11-11</a>
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -111,6 +121,72 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!-- Portfolio -->
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking-app.jpg"
+              width="360"
+              height="300"
+              alt="Banking App"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              width="360"
+              height="300"
+              alt="Cashless Payment"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              width="360"
+              height="300"
+              alt="Meditation App"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              width="360"
+              height="300"
+              alt="Taxi Service"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              width="360"
+              height="300"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              width="360"
+              height="300"
+              alt="Online Courses"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
