--- a/index.html
+++ b/index.html
@@ -11,75 +11,82 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- header -->
-    <header>
+    <header class="background-heder">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"> <span class="accent">Web</span>Studio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-email"
+            <a class="address-mail" href="mailto:info@devstudio.com" class="contacts-email"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-number"
+            <a class="addres-tel" href="tel:+110001111111" class="contacts-number"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
       </address>
     </header>
+    <!-- MAIN -->
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="order-background">
+        <h1 class="order-title">Effective Solutions for Your Business</h1>
+        <button class="order-button" type="button">Order Service</button>
       </section>
       <section>
         <h2>About Company</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="company-list">Strategy</h3>
+            <p class="company-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="company-list">Punctuality</h3>
+            <p class="company-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="company-list">Diligence</h3>
+            <p class="company-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="company-list">Technologies</h3>
+            <p class="company-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <!-- TEAM -->
-        <h2>Our Team</h2>
+      <!-- TEAM -->
+      <section class="team-background">
+                <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -89,8 +96,8 @@
               alt="Mark Guerrero"
             />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -99,8 +106,8 @@
               height="260"
               alt="Tom Ford"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -109,8 +116,8 @@
               height="260"
               alt="Camila Garcia"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -119,14 +126,14 @@
               height="260"
               alt="Daniel Wilson"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <!-- Portfolio -->
-        <h2>Our Portfolio</h2>
+      <!-- Portfolio -->
+      <section >
+                <h2 class="portfolio-title" >Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -135,8 +142,8 @@
               height="300"
               alt="Banking App"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -145,8 +152,8 @@
               height="300"
               alt="Cashless Payment"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -155,8 +162,8 @@
               height="300"
               alt="Meditation App"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -165,8 +172,8 @@
               height="300"
               alt="Taxi Service"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -175,8 +182,8 @@
               height="300"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
@@ -185,16 +192,16 @@
               height="300"
               alt="Online Courses"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-background">
+      <a href="./index.html" class="logo"> <span class="accent">Web</span> <span class="footer-logo">Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
