--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <!-- header -->
     <header class="background-heder">
       <nav>
-        <a href="./index.html" class="logo"> <span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo">
+          <span class="accent">Web</span>Studio</a
+        >
         <ul>
           <li><a class="nav-link" href="">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
@@ -33,12 +35,18 @@
       <address>
         <ul>
           <li>
-            <a class="address-mail" href="mailto:info@devstudio.com" class="contacts-email"
+            <a
+              class="address-mail"
+              href="mailto:info@devstudio.com"
+              class="contacts-email"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="addres-tel" href="tel:+110001111111" class="contacts-number"
+            <a
+              class="addres-tel"
+              href="tel:+110001111111"
+              class="contacts-number"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -86,7 +94,7 @@
       </section>
       <!-- TEAM -->
       <section class="team-background">
-                <h2 class="team-title">Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -132,8 +140,8 @@
         </ul>
       </section>
       <!-- Portfolio -->
-      <section >
-                <h2 class="portfolio-title" >Our Portfolio</h2>
+      <section>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -200,7 +208,10 @@
     </main>
     <!-- footer -->
     <footer class="footer-background">
-      <a href="./index.html" class="logo"> <span class="accent">Web</span> <span class="footer-logo">Studio</span></a>
+      <a href="./index.html" class="logo">
+        <span class="accent">Web</span>
+        <span class="footer-logo">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
