--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             >
           </li>
           <li>
-            <a
-              class="addres-tel"
-              href="tel:+110001111111"
+            <a href="tel:+110001111111"
               class="contacts-number"
               >+11 (000) 111-11-11</a
             >
