--- a/index.html
+++ b/index.html
@@ -35,16 +35,12 @@
       <address>
         <ul>
           <li>
-            <a
-              class="address-mail"
-              href="mailto:info@devstudio.com"
-              class="contacts-email"
+            <a href="mailto:info@devstudio.com" class="contacts-email"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111"
-              class="contacts-number"
+            <a href="tel:+110001111111" class="contacts-number"
               >+11 (000) 111-11-11</a
             >
           </li>
