--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
     <header class="background-heder">
       <nav>
         <a href="./index.html" class="logo">
-          <span class="accent">Web</span>Studio</a
+          Web<span class="logo-accent">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="addres-tel-mail">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-email"
+            <a href="mailto:info@devstudio.com" class="contacts-email-number"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="contacts-number"
+            <a href="tel:+110001111111" class="contacts-email-number"
               >+11 (000) 111-11-11</a
             >
           </li>
