--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         </ul>
       </section>
       <!-- TEAM -->
-      <section class="team-background">
+      <section class="team-fon">
         <h2 class="team-title">Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/mark.jpg"
@@ -203,8 +203,7 @@
     <!-- footer -->
     <footer class="footer-background">
       <a href="./index.html" class="logo">
-        <span class="accent">Web</span>
-        <span class="footer-logo">Studio</span></a
+        Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
