--- a/index.html
+++ b/index.html
@@ -89,19 +89,18 @@
       <!-- TEAM -->
       <section class="team-fon">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li>
+        <ul>
+          <li class="team-list">
             <img
               src="./images/mark.jpg"
               width="264"
               height="260"
               alt="Mark Guerrero"
             />
-
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/tom_ford.jpg"
               width="264"
@@ -111,7 +110,7 @@
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/camila_garcia.jpg"
               width="264"
@@ -121,7 +120,7 @@
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/daniel_wilson.jpg"
               width="264"
