--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <button class="order-button" type="button">Order Service</button>
       </section>
       <section>
-        <h2>About Company</h2>
+        <h2 class="visually-hidden">About Company</h2>
+        <!-- скривання заголовку -->
         <ul>
           <li>
             <h3 class="company-list">Strategy</h3>
